# ITU-OS-HW1

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  itush
include/: bison.tab.h  linkedlist.h  shell.h
source/: check.c  display.c  free.c  linkedlist.c
source/executor/: executor.c
source/lexer/: bison.tab.c  lex.yy.c
source/parser/: parser.c
